# RayTracer

./: .gitignore  CMakeLists.txt  common.h  geometry.cpp  geometry.h  geometry_helper.cpp  geometry_helper.h  geometry_helper_unittest.cpp  geometry_unittest.cpp  matrix.h  ray_tracer.cpp  ray_tracer.h  ray_tracer_unittest.cpp  xmath.h
